# EchoTrigger

./: .clangd  .gitignore  AGENTS.md  AGENTS.zh-CN.md  README.md  README.zh-CN.md  event_triggered_audio_replay_agent.md  event_triggered_audio_replay_agent.zh-CN.md
Hardware/Mic-ESP32/: .gitignore  CMakeLists.txt  Kconfig.projbuild  README.md  README.zh-CN.md  partitions.csv  sdkconfig.defaults
Hardware/Mic-ESP32/.cache/clangd/index/: audio_capture.c.60B1B5372FF1624A.idx  audio_capture.h.25BDDEE668D88498.idx  audio_packetizer.c.E36FF0F48BA32A40.idx  audio_packetizer.h.4C380A8C0386331E.idx  audio_protocol.h.F7E4AAB8A611671F.idx  device_config.c.8FEA6DA006FFCFEF.idx  device_config.h.0A1146D5902E2F3C.idx  health_monitor.c.D6057DE42B04861F.idx  health_monitor.h.CAAA006307E6C6F2.idx  main.c.FA32A34FA517B8CB.idx  mqtt_control.c.4B1F2498DEA956C7.idx  mqtt_control.h.F9177A864772C198.idx  udp_streamer.c.DD2976A8744A3B2F.idx  (+1 more)
Hardware/Mic-ESP32/main/: CMakeLists.txt  Kconfig.projbuild  audio_capture.c  audio_capture.h  audio_packetizer.c  audio_packetizer.h  audio_protocol.h  device_config.c  device_config.h  device_secrets.h.example  device_secrets_defaults.h  health_monitor.c  health_monitor.h  main.c  mqtt_control.c  mqtt_control.h  setup_portal.c  setup_portal.h  udp_streamer.c  udp_streamer.h
Software/pc_hub/: .dockerignore  .gitignore  Dockerfile  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml
Software/pc_hub/hub/: api.py  config.py  extractor.py  ha_mqtt.py  jobs.py  main.py  models.py  protocol.py  receiver.py  registry.py  ring_buffer.py  runtime.py  services.py  storage.py
Software/pc_hub/mcp_adapter/: main.py  server.py
Software/pc_hub/pc_audio_hub.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Software/pc_hub/shared/: timebase.py  wav.py
Software/pc_hub/tests/: test_entrypoints.py  test_ha_mqtt.py  test_jobs.py  test_mcp_adapter.py  test_qwen3_asr.py  test_runtime.py  test_services.py
Software/pc_hub/worker/: api.py  main.py  models.py
Software/pc_hub/worker/backends/: __init__.py  base.py  qwen3_asr.py
docs/: protocols.md  protocols.zh-CN.md  verification.md  verification.zh-CN.md
